# codex-hackathon-challenge

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  config.py  db.py  main.py  models.py
app/routes/: admin.py  rules.py  store.py
app/services/: __init__.py  codex_client.py  inventory.py  rule_engine.py
app/templates/: base.html
app/templates/pages/: admin_dashboard.html  admin_inventory.html  admin_login.html  admin_rules.html  product_detail.html  storefront.html
app/templates/partials/: product_fields.html
prompts/: Session Prompts.md
rules/: AGENTS.md  __init__.py  _base.py  example_clearance.py  mark_any_hoodie_with_fewer_than_10_units_in_stock_with_a_low_stock_badge_on_the.py
static/: site.css
tests/: test_db.py  test_routes_admin.py  test_routes_rules.py  test_routes_store.py  test_services_codex_client.py  test_services_inventory.py  test_services_rule_engine.py
tests/rules/: test_example_clearance.py  test_mark_any_hoodie_with_fewer_than_10_units_in_stock_with_a_low_stock_badge_on_the.py
