[project]
name = "codex-hackathon-challenge"
version = "0.1.0"
description = "FastAPI eCommerce demo for Codex-powered inventory rules."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]==0.136.1",
    "sqlalchemy==2.0.49",
    "pytest>=8,<9",
    "itsdangerous==2.2.0",
    "passlib[bcrypt]==1.7.4",
    "openai",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
